2003-01-18  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Updated install instructions to cover --with-apxs
	* configure.in: Check in /usr/sbin/apxs
	
2003-01-18  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	Submitted by Alp Toker <alp@atoker.com> :
	* configure.in: Use --with-apxs instead of --with-apache2 
	* src/Makefile.am: Install target

2003-01-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>
	* src/ApacheWorkerRequest.cs: added FIXME.
	* src/MonoWorkerRequest.cs: synched with the one in xsp.

2003-01-09  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* mcs/ApacheWorkerRequest.cs : Fixed typo, thanks Sergio Luis Valle Mayorga for catching it

2003-01-07  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Add new config instructions. Only a MonoApplication directive is needed right now
	* src/mod_mono.c: Get rid of LoadModMonoDll, per Miguel suggestion, we look for the assembly
	in the assembly path now. Add MonoApplication directive, this simplies compfiguration greatly.
	* src/Makefile.am : makedll.mak was not being included in the distribution
	* src/ApacheWorkerRequest.cs : Do nothing with Content-Length, it will be set by Apache
	
2003-01-06  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Added setter macros and allow setting status
	line and status code. Set r->content_type when Content-Type is set
	* src/Request.cs: Added SetStatusLine and SetStatusCode
	* src/ApacheWorkerRequest.cs: Added SendStatus
	
2003-01-03  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Added support functions for reading HTTP bodies,
	this enables POST support:
	mono_apache_should_client_block,
	mono_apache_setup_client_block,
	mono_apache_get_client_block
	* src/ApacheWorkerRequest : Added ReadEntityBody
	* src/Request : Added ShouldClientBlock, SetupClientBlock, GetClientBlock
	for reading HTTP bodies and enabling POST support

2002-12-31  Daniel Lopez Ridruejo <daniel @ rawbyte.com>